.kubernetes/overlays/gke/probes-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mm-frontend
spec:
  template:
    spec:
      containers:
        - name: frontend
          livenessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 60
