.kubernetes/overlays/gke/resources-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mm-frontend
spec:
  template:
    spec:
      containers:
        - name: frontend
          resources:
            limits:
              cpu: 200m
            requests:
              cpu: 50m
