.kubernetes/overlays/gke/rollout-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mm-frontend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
